add option --enable-preview to image builder